--- a/txt/2-terms-and-defintions.tex
+++ b/txt/2-terms-and-defintions.tex
@@ -3,10 +3,11 @@
 \begin{document}
 
 \chapter{Background}
+\label{chap:background}
+
 This chapter covers the technical and theoretical background of the thesis.
 It provides short explanations of the concepts addressed in this work.
 Furthermore, it aims to clarify the understanding of the terms used throughout the thesis.
-
 
 \section{Cryptography}
 This section covers the cryptographic concepts the thesis relies on.
