--- a/txt/5-protocol-design.tex
+++ b/txt/5-protocol-design.tex
@@ -165,7 +165,7 @@ Once within the metadata and once within the encrypted data.
 \subsection{Realization via JOSE}
 \label{sec:jose-protocol}
 
-A log within the current \emph{Inverse Transparency} toolchain is represented by a JSON object.
+A log within the current \emph{transparency toolchain} is represented by a JSON object.
 This motivates the usage of the JOSE standard~\cite{Barnes2014}.
 Details about it can be found in \cref{sec:jose}.
 The JOSE standard can be used to cryptographically sign~(JWS) and encrypt~(JWE) JSON data.
