--- a/txt/99-appendix.tex
+++ b/txt/99-appendix.tex
@@ -2,9 +2,10 @@
 
 \begin{document}
 
-\chapter{Alogrithms}
+\chapter{Illustration of alogrithms}
 
-This appendix details the applied encryption and decryption algorithms.
+This appendix illustrates the applied encryption and decryption algorithms.
+For details about their functionality have a look to \cref{chap:design}.
 
 \section{Encryption algorithm}
 \label{app:encryption}
