--- a/txt/0-abstract.tex
+++ b/txt/0-abstract.tex
@@ -4,5 +4,17 @@
 
 \chapter*{\myAbstractTitle}
 
-\todo{abstract}
+The concept of \emph{Inverse Transparency} aims to ensure data sovereignty while allowing the sensible usage of sensitive data.
+The \emph{transaprency toolchain} supports this approach and provides a technical framework where all data accesses are transparently logged.  
+This thesis contributes to the toolchain by designing and implementing an end-to-end encrypted protocol which allows users share and revoke access to their logs.
+A survey of potential encryption techniques turns out that the elaborated requirements are fulfilled best when relying on hybrid encryption.
+The designed protocol was implemented as a cryptographic library which is available in Go, Python and Typescript.
+It assumes that a secure PKI is available and relies on the "JSON Web Encryption and Signing" standard.
+
+The toolchain was adopted to handle encrypted logs.
+The performance evaluation shows that the encryption layer introduces an acceptable overhead to the toolchain.
+Logs can be shared for up to 170 users without noticing a computation delay.
+If 100 encrypted logs are fetched from the server the introduced overhead is $55ms$.
+This ensures that the designed protocol can be used in practice to share encrypted logs within the \emph{transaprency toolchain}.
+
 \end{document}
